force-app/main/default/objects/Emission_Factor__c/Emission_Factor__c.object-meta.xml
<CustomObject>
    <description>HT: Created for NZC Implementation UC003_US01, created to store different type of emission factors.</description>
    <label>Emission Factor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emission Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>