force-app/main/default/objects/Emission_Factor__c/fields/CFC_R22_Refrigerant_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>CFC_R22_Refrigerant_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFC-R22 Refrigerant Emissions Factor</label>
    <referenceTo>RefrigerantEmssnFctr</referenceTo>
    <relationshipName>Load_Emission_Factors1</relationshipName>
    <type>Lookup</type>
</CustomField>