force-app/main/default/objects/Emission_Factor__c/fields/Electricity_Emissions_Factor_Set__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Emissions_Factor_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Electricity Emissions Factor Set</label>
    <referenceTo>ElectricityEmssnFctrSet</referenceTo>
    <relationshipName>Load_Emission_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>