force-app/main/default/objects/Emission_Factor__c/fields/HFC_125_Refrigerant_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>HFC_125_Refrigerant_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HFC-125 Refrigerant Emissions Factor</label>
    <referenceTo>RefrigerantEmssnFctr</referenceTo>
    <relationshipLabel>Emission Factors (HFC - 125 Refrigerant Emissions Factor)</relationshipLabel>
    <relationshipName>Load_Emission_Factors5</relationshipName>
    <type>Lookup</type>
</CustomField>