force-app/main/default/objects/Emission_Factor__c/fields/HFC_134a_Refrigerant_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>HFC_134a_Refrigerant_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HFC-134a Refrigerant Emissions Factor</label>
    <referenceTo>RefrigerantEmssnFctr</referenceTo>
    <relationshipLabel>Emission Factors (HFC - 134a Refrigerant Emissions Factor)</relationshipLabel>
    <relationshipName>Load_Emission_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>