force-app/main/default/objects/Emission_Factor__c/fields/HFC_R32_Refrigerant_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>HFC_R32_Refrigerant_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HFC-R32 Refrigerant Emissions Factor</label>
    <referenceTo>RefrigerantEmssnFctr</referenceTo>
    <relationshipName>Load_Emission_Factors4</relationshipName>
    <type>Lookup</type>
</CustomField>