force-app/main/default/objects/Emission_Factor__c/fields/HFC_R404a_Refrigerant_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>HFC_R404a_Refrigerant_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HFC-R404a Refrigerant Emissions Factor</label>
    <referenceTo>RefrigerantEmssnFctr</referenceTo>
    <relationshipLabel>Emission Factors (HFC-R404a Refrigerant Emissions Factor)</relationshipLabel>
    <relationshipName>Emission_Factors_R404a</relationshipName>
    <type>Lookup</type>
</CustomField>