force-app/main/default/objects/Emission_Factor__c/fields/HFC_R407c_Refrigerant_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>HFC_R407c_Refrigerant_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HFC-R407c Refrigerant Emissions Factor</label>
    <referenceTo>RefrigerantEmssnFctr</referenceTo>
    <relationshipName>Load_Emission_Factors3</relationshipName>
    <type>Lookup</type>
</CustomField>