force-app/main/default/objects/Emission_Factor__c/fields/Last_Site_Information_Records_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Information_Records_Updated_On__c</fullName>
    <label>Last Site Information Records Updated On</label>
    <type>DateTime</type>
</CustomField>