force-app/main/default/objects/Emission_Factor__c/fields/Other_Emissions_Factor_Set__c.field-meta.xml
<CustomField>
    <fullName>Other_Emissions_Factor_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Emissions Factor Set</label>
    <referenceTo>OtherEmssnFctrSet</referenceTo>
    <relationshipName>Load_Emission_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>