force-app/main/default/objects/Emission_Factor__c/fields/Update_Existing_Site_Information_Record__c.field-meta.xml
<CustomField>
    <fullName>Update_Existing_Site_Information_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checkbox is selected, then all existing Site records for this Country (non-US) or State (for US country only) would be updated with these emission factors.</inlineHelpText>
    <label>Update Existing Site Information Record</label>
    <type>Checkbox</type>
</CustomField>