force-app/main/default/objects/Emission_Factor__c/fields/Updation_Error_message__c.field-meta.xml
<CustomField>
    <fullName>Updation_Error_message__c</fullName>
    <label>Updation Error message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>