force-app/main/default/objects/Emission_Factor__c/fields/Waste_Disposal_Emissions_Factor_Set__c.field-meta.xml
<CustomField>
    <fullName>Waste_Disposal_Emissions_Factor_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Venkat: Created as part of NZC Phase 2 implementation.
Purpose: To track the waste disposal emission factor set record.</description>
    <label>Waste Disposal Emissions Factor Set</label>
    <referenceTo>WstDispoEmssnFctrSet</referenceTo>
    <relationshipLabel>Emission Factors</relationshipLabel>
    <relationshipName>Emission_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>