force-app/main/default/objects/Emission_Factor__c/validationRules/NZC_Emission_Factor_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Emission_Factor_Country_Mandatory</fullName>
    <active>true</active>
    <description>Venkat: Created as part of NZC Implementation
Purpose: Created to check whether the valid 2 character country code is entered or not</description>
    <errorConditionFormula>OR(
     ISBLANK(Country__c),
     LEN(Country__c) &lt;&gt; 2,
     NOT(CONTAINS( $Label.NZC_Country_Codes , Country__c)),
     CONTAINS (Country__c,&apos;;&apos;)
    )</errorConditionFormula>
    <errorMessage>Please enter a valid 2-character country code.</errorMessage>
</ValidationRule>