force-app/main/default/objects/Emission_Factor__c/validationRules/NZC_Emission_Factor_US_State_Code_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Emission_Factor_US_State_Code_Check</fullName>
    <active>true</active>
    <description>Venkat: Created as part of NZC Implementation
Purpose: Check if valid state code is populated if country entered as US</description>
    <errorConditionFormula>AND(
    CONTAINS( Country__c , &quot;US&quot;),
    OR(
       ISBLANK( State__c ),
       LEN(State__c) &lt;&gt; 2,
       NOT(CONTAINS( $Label.NZC_US_Country_State_Codes,State__c)),
       CONTAINS (State__c,&apos;;&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Please enter the valid 2 character State Code if Country entered is US</errorMessage>
</ValidationRule>