force-app/main/default/objects/Emission_Factor__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <columns>Electricity_Emissions_Factor_Set__c</columns>
    <columns>Other_Emissions_Factor_Set__c</columns>
    <columns>HFC_134a_Refrigerant_Emissions_Factor__c</columns>
    <columns>HFC_R32_Refrigerant_Emissions_Factor__c</columns>
    <columns>HFC_R407c_Refrigerant_Emissions_Factor__c</columns>
    <columns>HFC_R410a_Refrigerant_Emissions_Factor__c</columns>
    <columns>CFC_R22_Refrigerant_Emissions_Factor__c</columns>
    <columns>HFC_R404a_Refrigerant_Emissions_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>